hphp/test/quick/clsmethod-ctx.php.expectf
Private in a

Fatal error: Call to private a::priv() from invalid context in %s on line 15
